--- a/jamieFrontEndOct.html
+++ b/jamieFrontEndOct.html
@@ -46,35 +46,44 @@
                      alt="">
           </a>
         </nav>
-        <div class="card" style="width: 30%;">
+
+        <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Ligue Mark 2019</h1>
+                  <p class="lead">Bienvenue au page d'acceuil </p>
+                </div>
+        </div>
+        <div class="options">
+         <div class="card" style="width: 200px;">
                 <img class="card-img-top" 
                      src="softball.jpg" 
                      alt="Generic Handsome Guy">
                 <div class="card-body">
-                  <h5 class="card-title">Classements 2018</h5>
-                  <p class="card-text"></p>
+                  <h5 class="card-title">Classements</h5>
+                  <p class="card-text">2018</p>
                   <a href="#" class="btn btn-primary">Cliquer ici</a>
                 </div>
-        </div>
-        <div class="card" style="width: 30%;">
+         </div>
+         <div class="card" style="width: 200px;">
                 <img class="card-img-top" 
                      src="LM.jpg" 
                      alt="Generic Handsome Guy">
                 <div class="card-body">
-                  <h5 class="card-title">Resultats 2018</h5>
-                  <p class="card-text"></p>
+                  <h5 class="card-title">Resultats </h5>
+                  <p class="card-text">2018</p>
                   <a href="#" class="btn btn-primary">Cliquer ici</a>
-        </div>
-        </div>
-        <div class="card" style="width: 30%;">
+         </div>
+         </div>
+         <div class="card" style="width: 200px;">
                 <img class="card-img-top" 
                      src="softball.jpg" 
                      alt="Generic Handsome Guy">
                 <div class="card-body">
-                  <h5 class="card-title">Equipes 2018</h5>
-                  <p class="card-text"></p>
+                  <h5 class="card-title">Equipes </h5>
+                  <p class="card-text">2018</p>
                   <a href="#" class="btn btn-primary">Cliquer ici</a>
                 </div>
+         </div>
         </div>
     <script type="text/javascript" 
             src="https://code.jquery.com/jquery-3.3.1.min.js">
