--- a/jamieFrontEndOct.html
+++ b/jamieFrontEndOct.html
@@ -82,6 +82,13 @@
                 </div>
          </div>
         </div>
+        <div class="jamiesFooter">
+                <nav class="navbar navbar-light bg-light">
+                        <span class="navbar-text">
+                          created and maintained by Jamie McKeown
+                        </span>
+                </nav>
+        </div>
     <script type="text/javascript" 
             src="https://code.jquery.com/jquery-3.3.1.min.js">
     </script>
