--- a/jamieFrontEndOct.html
+++ b/jamieFrontEndOct.html
@@ -45,9 +45,13 @@
         </nav>
 
         <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                  <h1 class="display-4">Ligue Mark 2019</h1>
-                  <p class="lead">Bienvenue au page d'acceuil </p>
+                <div   class="container">
+                  <h1  class="display-4">Ligue Mark 2019</h1>
+                  <p   class="lead">Bienvenue au page d'acceuil </p>
+                  <a>
+                   <img src="dmsaLogo.svg">
+                  </a>
+                   
                 </div>
         </div>
         <div class="options">
@@ -76,18 +80,16 @@
                      src="stockbaseball3.jpg" 
                      alt="Generic Handsome Guy">
                 <div class="card-body">
-                  <h5 class="card-title">Equipes </h5>
+                  <h5 class="card-title">Horaires </h5>
                   <p class="card-text">2018</p>
                   <a href="#" class="btn btn-primary">Cliquer ici</a>
                 </div>
          </div>
         </div>
-        <div class="jamiesFooter">
-                <nav class="navbar navbar-light bg-light">
-                        <span class="navbar-text">
-                          created and maintained by Jamie McKeown
-                        </span>
-                </nav>
+        <div class="makeshiftFooter">
+                <div class="footerWriting">
+                       <h6>Created and maintained by Jamie McKeown</h6>
+                </div>
         </div>
     <script type="text/javascript" 
             src="https://code.jquery.com/jquery-3.3.1.min.js">
@@ -99,7 +101,8 @@
     </script>
 
     <script type="text/javascript" 
-            src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js">
+    </script>
 
     <script type="text/javascript" 
             src="jfeo.js">
