--- a/jamieFrontEndOct.html
+++ b/jamieFrontEndOct.html
@@ -4,6 +4,7 @@
 <meta   charset="utf-8" />
 <meta   http-equiv="X-UA-Compatible" 
         content="IE=edge">
+    
 
     <title>Ligue Mark</title>
 
@@ -34,18 +35,19 @@
 </head>
 <body>
         
-        <nav class="navbar navbar-dark bg-dark">
+        <nav         class="navbar navbar-dark bg-dark">
         <a>
-         <img src="dmsaLogo.svg"
-              width=60px;
-              height=60px;>
+         <img        src="dmsaLogo.svg"
+                     width=60px;
+                     height=60px;>
         </a>
-        <div   class="container">
-         <h1  class="display-4">Ligue Mark 2019</h1>
+        <div         class="container">
+         <h1         class="display-4">Ligue Mark's League 2019</h1>
         </div>
         </nav>
-        <div class="options">
-         <div class="card" style="width: 200px;">
+        <div         class="options">
+         <div        class="card" 
+                     style="width: 200px;">
                 <img class="card-img-top" 
                      src="stockbaseball1.jpg" 
                      alt="Generic Handsome Guy">
@@ -56,26 +58,29 @@
                      class="btn btn-primary">Cliquer ici</a>
                 </div>
         </div>
-        <div class="card" style="width: 200px;">
+        <div         class="card" 
+                     style="width: 200px;">
                 <img class="card-img-top" 
                      src="stockbaseball2.jpg" 
                      alt="Generic Handsome Guy">
                 <div class="card-body">
-                  <h5 class="card-title">Resultats </h5>
+                 <h5 class="card-title">Resultats </h5>
                   <p class="card-text">2018</p>
                   <a href="http://www.dmsa.ca/en/stats/schedule.html?season=1206&subSeason=1207&category=2600" 
                      class="btn btn-primary">Cliquer ici</a>
          </div>
          </div>
-         <div class="card" style="width: 200px;">
+         <div        class="card" 
+                     style="width: 200px;">
                 <img class="card-img-top" 
                      src="stockbaseball3.jpg" 
                      alt="Generic Handsome Guy">
                 <div class="card-body">
-                  <h5 class="card-title">Horaires
+                 <h5 class="card-title">Horaires
                           (pas disponible) </h5>
                   <p class="card-text">2019</p>
-                  <a href="" class="btn btn-primary">Cliquer ici</a>
+                  <a href="" 
+                     class="btn btn-primary">Cliquer ici</a>
                 </div>
          </div>
         </div>
@@ -83,7 +88,7 @@
         <br>
         <br>
         <br>
-        <div class="makeshiftFooter">
+        <div         class="makeshiftFooter">
                 <div class="footerWriting">
                        <h6>Created and maintained by Jamie McKeown</h6>
                 </div>
