--- a/jamieFrontEndOct.html
+++ b/jamieFrontEndOct.html
@@ -41,9 +41,13 @@
                      width=60px;
                      height=60px;>
         </a>
-        <div         class="container">
+        <!-- <div         class="container">
          <h1         class="display-4">Ligue Mark's League 2019</h1>
-        </div>
+        </div> -->
+        <marquee     behavior="scroll" 
+                     direction="left">D.M.S.A- Ligue Mark's League
+        </marquee>
+
         </nav>
         <div         class="options">
          <div        class="card" 
@@ -76,8 +80,7 @@
                      src="stockbaseball3.jpg" 
                      alt="Generic Handsome Guy">
                 <div class="card-body">
-                 <h5 class="card-title">Horaires
-                          (pas disponible) </h5>
+                 <h5 class="card-title">Horaires </h5>
                   <p class="card-text">2019</p>
                   <a href="" 
                      class="btn btn-primary">Cliquer ici</a>
@@ -90,7 +93,7 @@
         <br>
         <div         class="makeshiftFooter">
                 <div class="footerWriting">
-                       <h6>Created and maintained by Jamie McKeown</h6>
+                       <h6>Created and maintained by Jamie McKeown®</h6>
                 </div>
         </div>
     <script type="text/javascript" 
