added jquery features

--- a/jamieFrontEndOct.html
+++ b/jamieFrontEndOct.html
@@ -42,20 +42,21 @@
                      width=60px;
                      height=60px;>
          </a>
-        <!-- <div         class="container">
+        <div         class="container">
          <h1         class="display-4">Ligue Mark's League 2019</h1>
-        </div> -->
-        <marquee     behavior="scroll" 
+        </div>
+        <!-- <marquee     behavior="scroll" 
                      direction="left">Ligue Mark's League
-        </marquee>
+        </marquee>  -->
 
         </nav>
+        
         <div         class="options">
         
         <div         class="card" 
                      style="width: 200px;">
                 <img class="card-img-top" 
-                     src="stockbaseball1.jpg" 
+                     src="softballBackground.jpg" 
                      alt="Generic Handsome Guy">
                 <div class="card-body1">
                  <h5 class="card-title">Classements</h5>
@@ -85,8 +86,6 @@
                 </div>
          </div>
         </div>
-        <br>
-        <br>
         <br>
         <br>
         <div         class="makeshiftFooter">
