added weather widget

--- a/jamieFrontEndOct.html
+++ b/jamieFrontEndOct.html
@@ -87,6 +87,14 @@
          </div>
         </div>
         <br>
+        <div class="weatherWidget">
+                <a   class="weatherwidget-io" 
+                     href="https://forecast7.com/fr/45d54n73d89/deux-montagnes/" 
+                     data-label_1="Parc Olympia" 
+                     data-theme="white_leather">
+                </a>
+        </div>        
+        <br>
         <br>
         <div         class="makeshiftFooter">
                 <div class="footerWriting">
