--- a/index.html
+++ b/index.html
@@ -86,13 +86,16 @@
          </div>
         </div>
         <br>
-        <a           class="weatherwidget-io"
-                     href="https://forecast7.com/fr/45d54n73d89/deux-montagnes/"
-                     data-label_1="Olympia/Centrale"
-                     data-font="Times New Roman"
-                     data-mode="Forecast"
-                     data-days="5"
-                     data-theme="metallic" >Olympia/Centrale</a>
+        <a  class="weatherwidget-io"
+            href="https://forecast7.com/fr/45d54n73d89/deux-montagnes/"
+            data-label_1="Olympia/Centrale"
+            data-label_2="Météo"
+            data-font="Times New Roman"
+            data-icons="Climacons Animated"
+            data-mode="Forecast"
+            data-days="5"
+            data-theme="weather_one">Olympia/Centrale Météo
+        </a>
         <br>
         <div         class="makeshiftFooter">
                 <div class="footerWriting">
