--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
     <script type="text/javascript"
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js">
     </script>
+    <script type="text/javascript"
+            src="https://cdn.ywxi.net/js/1.js"
+            async>
+    </script>
+
 
     <script type="text/javascript"
             src="jfeo.js">
