weather as a card

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             type="text/css"
             href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+            <!-- linking google-font -->
+    <link   href="https://fonts.googleapis.com/css?family=Source+Sans+Pro"
+            rel="stylesheet">
+
 
 </head>
 <body>
@@ -84,24 +88,28 @@
                   <p class="card-text">2019</p>
                 </div>
          </div>
+         <div        class="card"
+                     style="width: 200px;">
+                <img class="card-img-top"
+                     src="https://source.unsplash.com/uu-Jw5SunYI"
+                     alt="Generic Handsome Guy">
+                 <div class="card-body4">
+                 <h5 class="card-title">Météo / Weather</h5>
+
+                 </div>
+         </div>
         </div>
         <br>
-        <a  class="weatherwidget-io"
+        <!-- <a  class="weatherwidget-io"
             href="https://forecast7.com/fr/45d54n73d89/deux-montagnes/"
-            data-label_1="Olympia/Centrale"
-            data-label_2="Météo"
+            data-label_1="Parc Olympia / Parc Centrale"
             data-font="Times New Roman"
             data-icons="Climacons Animated"
             data-mode="Forecast"
             data-days="5"
             data-theme="weather_one">Olympia/Centrale Météo
-        </a>
-        <br>
-        <div         class="makeshiftFooter">
-                <div class="footerWriting">
-                       <h6>Created by Jamie McKeown</h6>
-                </div>
-        </div>
+        </a> -->
+
     <script type="text/javascript"
             src="https://code.jquery.com/jquery-3.3.1.min.js">
     </script>
@@ -114,11 +122,6 @@
     <script type="text/javascript"
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js">
     </script>
-    <script type="text/javascript"
-            src="https://cdn.ywxi.net/js/1.js"
-            async>
-    </script>
-
 
     <script type="text/javascript"
             src="jfeo.js">
