added matching footer

--- a/index.html
+++ b/index.html
@@ -83,32 +83,26 @@
                      src="https://source.unsplash.com/FoKO4DpXamQ"
                      alt="Generic Handsome Guy">
                 <div class="card-body3">
-                 <h5 class="card-title">Horaires/
-                         Schedules </h5>
+                 <h5 class="card-title">Horaires/Schedules </h5>
                   <p class="card-text">2019</p>
-                </div>
          </div>
-         <div        class="card"
-                     style="width: 200px;">
+         </div>
+                <div        class="card"
+                            style="width: 200px;">
                 <img class="card-img-top"
                      src="https://source.unsplash.com/uu-Jw5SunYI"
                      alt="Generic Handsome Guy">
-                 <div class="card-body4">
+                <div class="card-body4">
                  <h5 class="card-title">Météo / Weather</h5>
 
-                 </div>
-         </div>
+                </div>
         </div>
-        <br>
-        <!-- <a  class="weatherwidget-io"
-            href="https://forecast7.com/fr/45d54n73d89/deux-montagnes/"
-            data-label_1="Parc Olympia / Parc Centrale"
-            data-font="Times New Roman"
-            data-icons="Climacons Animated"
-            data-mode="Forecast"
-            data-days="5"
-            data-theme="weather_one">Olympia/Centrale Météo
-        </a> -->
+
+        <div class="footer">
+                <p>Jamie McKeown 2018 ©</p>
+        </div>
+
+
 
     <script type="text/javascript"
             src="https://code.jquery.com/jquery-3.3.1.min.js">
