--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
          <a>
           <img        class="dmsa"
                      src="dmsaLogo.svg"
-                     width=60px;
-                     height=60px;>
+                     width=50px;
+                     height=50px;>
          </a>
         <div         class="container">
          <h1         class="display-4">Ligue Mark's League 2019</h1>
@@ -52,31 +52,33 @@
         </nav>
 
         <div         class="options">
-
+        <div         class="shadow p-3 mb-5 bg-whitesmoke rounded">
         <div         class="card"
                      style="width: 200px;">
                 <img class="card-img-top"
                      src="https://source.unsplash.com/Oklzj82ffsQ"
                      alt="Generic Handsome Guy">
                 <div class="card-body1">
-                 <h5 class="card-title">Classements/
-                        Standings</h5>
+                 <h5 class="card-title">Classements/Standings</h5>
                   <p class="card-text">2018</p>
 
                 </div>
         </div>
+        </div>
+        <div         class="shadow p-3 mb-5 bg-whitesmoke rounded">
         <div         class="card"
                      style="width: 200px;">
                 <img class="card-img-top"
                      src="https://source.unsplash.com/3_JwPJwq6CI"
                      alt="Generic Handsome Guy">
                 <div class="card-body2">
-                 <h5 class="card-title">Resultats/
-                         Results </h5>
+                 <h5 class="card-title">Resultats/Results </h5>
                   <p class="card-text">2018</p>
 
          </div>
          </div>
+         </div>
+        <div         class="shadow p-3 mb-5 bg-whitesmoke rounded">
          <div        class="card"
                      style="width: 200px;">
                 <img class="card-img-top"
@@ -87,15 +89,18 @@
                   <p class="card-text">2019</p>
          </div>
          </div>
-                <div        class="card"
-                            style="width: 200px;">
+         </div>
+        <div         class="shadow p-3 mb-5 bg-whitesmoke rounded">
+                <div class="card"
+                     style="width: 200px;">
                 <img class="card-img-top"
                      src="https://source.unsplash.com/uu-Jw5SunYI"
                      alt="Generic Handsome Guy">
                 <div class="card-body4">
                  <h5 class="card-title">Météo / Weather</h5>
-
+                  <p class="card-text">7 jours</p>
                 </div>
+        </div>
         </div>
 
         <div class="footer">
