--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
          </a>
         <div         class="container">
          <h1         class="display-4">Ligue Mark's League 2019</h1>
+
         </div>
         </nav>
-
+        <button type="button" class="btn btn-primary">Français</button>
         <div         class="options">
         <div         class="shadow p-3 mb-5 bg-whitesmoke rounded">
         <div         class="card"
@@ -59,7 +60,7 @@
                      src="https://source.unsplash.com/en7G3hTSjBQ"
                      alt="Generic Handsome Guy">
                 <div class="card-body1">
-                 <h5 class="card-title">Classements/Standings</h5>
+                 <h5 class="card-title">Standings</h5>
                   <p class="card-text">2018</p>
 
                 </div>
@@ -73,7 +74,7 @@
                      src="avenger.png"
                      alt="Generic Handsome Guy">
                 <div class="card-body2">
-                 <h5 class="card-title">Resultats/Results </h5>
+                 <h5 class="card-title">Results </h5>
                   <p class="card-text">2018</p>
 
          </div>
@@ -86,7 +87,7 @@
                      src="https://source.unsplash.com/PevfaVA2FrA"
                      alt="Generic Handsome Guy">
                 <div class="card-body3">
-                 <h5 class="card-title">Horaires/Schedules </h5>
+                 <h5 class="card-title">Schedules </h5>
                   <p class="card-text">2019</p>
          </div>
          </div>
@@ -98,8 +99,8 @@
                      src="https://source.unsplash.com/9XAnXWHu9_4"
                      alt="Generic Handsome Guy">
                 <div class="card-body4">
-                 <h5 class="card-title">Météo / Weather</h5>
-                  <p class="card-text">7 jours</p>
+                 <h5 class="card-title">Weather</h5>
+                  <p class="card-text">7 day</p>
                 </div>
         </div>
         </div>
