--- a/index.html
+++ b/index.html
@@ -36,22 +36,35 @@
             rel="stylesheet">
 
 
+
+
 </head>
 <body>
 
         <nav         class="navbar">
          <a>
           <img        class="dmsa"
-                     src="dmsaLogo.svg"
+                     src="dmsaLogo.svg";
                      width=50px;
                      height=50px;>
          </a>
+
         <div         class="container">
-         <h1         class="display-4">Ligue Mark's League 2019</h1>
+         <h1         class="display-4">Mark's League 2019</h1>
 
         </div>
         </nav>
-        <button type="button" class="btn btn-primary">Français</button>
+
+        <div id="google_translate_element"></div>
+        <script type="text/javascript">
+                function googleTranslateElementInit() {
+                        new google.translate.TranslateElement({ pageLanguage: 'en', includedLanguages: 'fr', layout: google.translate.TranslateElement.InlineLayout.SIMPLE }, 'google_translate_element');
+                }
+        </script>
+        <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+
+
         <div         class="options">
         <div         class="shadow p-3 mb-5 bg-whitesmoke rounded">
         <div         class="card"
@@ -124,8 +137,18 @@
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js">
     </script>
 
+     <script type="text/javascript"
+             src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+     </script>
+     <script
+             type="text/javascript"
+             src='jfeo.js'>
+     </script>
+
     <script type="text/javascript"
             src="jfeo.js">
     </script>
+
+
 </body>
 </html>
