--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="IE=edge">
 
 
-    <title>Ligue Mark</title>
+    <title id="title1">Mark's League</title>
 
     <meta   name="viewport"
             content="width=device-width, initial-scale=1">
@@ -50,18 +50,15 @@
          </a>
 
         <div         class="container">
-         <h1         class="display-4">Mark's League 2019</h1>
+         <h1         id = "display-4" class="display-4">Mark's League 2019</h1>
 
         </div>
+
+        <button id="btn" type="button">Français</button>
         </nav>
 
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-                function googleTranslateElementInit() {
-                        new google.translate.TranslateElement({ pageLanguage: 'en', includedLanguages: 'fr', layout: google.translate.TranslateElement.InlineLayout.SIMPLE }, 'google_translate_element');
-                }
-        </script>
-        <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+
 
 
 
@@ -73,7 +70,7 @@
                      src="https://source.unsplash.com/en7G3hTSjBQ"
                      alt="Generic Handsome Guy">
                 <div class="card-body1">
-                 <h5 class="card-title">Standings</h5>
+                 <p  id="card-title1">Standings</p>
                   <p class="card-text">2018</p>
 
                 </div>
@@ -87,7 +84,7 @@
                      src="avenger.png"
                      alt="Generic Handsome Guy">
                 <div class="card-body2">
-                 <h5 class="card-title">Results </h5>
+                 <p id="card-title2">Results </p>
                   <p class="card-text">2018</p>
 
          </div>
@@ -100,7 +97,7 @@
                      src="https://source.unsplash.com/PevfaVA2FrA"
                      alt="Generic Handsome Guy">
                 <div class="card-body3">
-                 <h5 class="card-title">Schedules </h5>
+                 <p id="card-title3">Schedules </p>
                   <p class="card-text">2019</p>
          </div>
          </div>
@@ -112,8 +109,8 @@
                      src="https://source.unsplash.com/9XAnXWHu9_4"
                      alt="Generic Handsome Guy">
                 <div class="card-body4">
-                 <h5 class="card-title">Weather</h5>
-                  <p class="card-text">7 day</p>
+                 <p id="card-title4">Weather</p>
+                  <p id="card-text4">7 day</p>
                 </div>
         </div>
         </div>
@@ -137,9 +134,6 @@
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js">
     </script>
 
-     <script type="text/javascript"
-             src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-     </script>
      <script
              type="text/javascript"
              src='jfeo.js'>
@@ -148,7 +142,6 @@
     <script type="text/javascript"
             src="jfeo.js">
     </script>
-
 
 </body>
 </html>
