eng to fre on click

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="IE=edge">
 
 
-    <title id="title1">Mark's League</title>
+    <title id="headerId">Mark's League</title>
 
     <meta   name="viewport"
             content="width=device-width, initial-scale=1">
@@ -50,11 +50,12 @@
          </a>
 
         <div         class="container">
-         <h1         id = "display-4" class="display-4">Mark's League 2019</h1>
+         <h1         class="display-4">Mark's League 2019</h1>
 
         </div>
 
-        <button id="btn" type="button">Français</button>
+        <button id="btn1" type="button">Français</button>
+        <button id="btn2" type="button">English</button>
         </nav>
 
 
@@ -84,7 +85,7 @@
                      src="avenger.png"
                      alt="Generic Handsome Guy">
                 <div class="card-body2">
-                 <p id="card-title2">Results </p>
+                 <p  id="card-title2">Results </p>
                   <p class="card-text">2018</p>
 
          </div>
@@ -97,7 +98,7 @@
                      src="https://source.unsplash.com/PevfaVA2FrA"
                      alt="Generic Handsome Guy">
                 <div class="card-body3">
-                 <p id="card-title3">Schedules </p>
+                 <p  id="card-title3">Schedules </p>
                   <p class="card-text">2019</p>
          </div>
          </div>
@@ -106,10 +107,10 @@
                 <div class="card"
                      style="width: 200px;">
                 <img class="card-img-top"
-                     src="https://source.unsplash.com/9XAnXWHu9_4"
+                     src="weather.jpg"
                      alt="Generic Handsome Guy">
                 <div class="card-body4">
-                 <p id="card-title4">Weather</p>
+                 <p  id="card-title4">Weather</p>
                   <p id="card-text4">7 day</p>
                 </div>
         </div>
