changes needed to p tag

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
             <!-- linking google-font -->
-    <link   href="https://fonts.googleapis.com/css?family=Source+Sans+Pro"
+    <link   href="https://fonts.googleapis.com/css?family=Roboto+Condensed"
             rel="stylesheet">
 
 
@@ -62,13 +62,13 @@
 
 
 
-
+        <p id="headline">Check here for registration 2019 info!!!</p>
         <div         class="options">
         <div         class="shadow p-3 mb-5 bg-whitesmoke rounded">
         <div         class="card"
                      style="width: 200px;">
                 <img class="card-img-top"
-                     src="https://source.unsplash.com/en7G3hTSjBQ"
+                     src="standings.png"
                      alt="Generic Handsome Guy">
                 <div class="card-body1">
                  <p  id="card-title1">Standings</p>
@@ -82,7 +82,7 @@
         <div         class="card"
                      style="width: 200px;">
                 <img class="card-img-top"
-                     src="avenger.png"
+                     src="results.jpg"
                      alt="Generic Handsome Guy">
                 <div class="card-body2">
                  <p  id="card-title2">Results </p>
@@ -95,7 +95,7 @@
          <div        class="card"
                      style="width: 200px;">
                 <img class="card-img-top"
-                     src="https://source.unsplash.com/PevfaVA2FrA"
+                     src="schedule.jpg"
                      alt="Generic Handsome Guy">
                 <div class="card-body3">
                  <p  id="card-title3">Schedules </p>
