--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
 
-        <p id="headline">Check here for registration 2019 info!!!</p>
+        <p id="headline">Check here for 2019 registration info!!!</p>
         <div         class="options">
         <div         class="shadow p-3 mb-5 bg-whitesmoke rounded">
         <div         class="card"
