--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 
 
 
-
 </head>
 <body>
 
@@ -53,16 +52,19 @@
          <h1         class="display-4">Mark's League 2019</h1>
 
         </div>
-
-        <button id="btn1" type="button">Français</button>
-        <button id="btn2" type="button">English</button>
+        <div id="wrap">
+                <div>
+                        <button id="btn1" type="button">Français</button>
+                </div>
+                <div>
+                        <button id="btn2" type="button">English</button>
+                </div>
+        </div>
         </nav>
+        <hr>
 
 
-
-
-
-        <p id="headline">Check here for 2019 registration info!!!</p>
+        <!-- <p id="headline">Check here for 2019 registration info!!!</p> -->
         <div         class="options">
         <div         class="shadow p-3 mb-5 bg-whitesmoke rounded">
         <div         class="card"
