--- a/index.html
+++ b/index.html
@@ -52,13 +52,9 @@
          <h1         class="display-4">Mark's League 2019</h1>
 
         </div>
-        <div id="wrap">
-                <div>
-                        <button id="btn1" type="button">Français</button>
-                </div>
-                <div>
-                        <button id="btn2" type="button">English</button>
-                </div>
+        <div class="btn-group" role="group" aria-label="Basic example">
+                <button  id="btn1" type="button" class="btn btn-secondary">Français</button>
+                <button  id="btn2" type="button" class="btn btn-secondary">English</button>
         </div>
         </nav>
         <hr>
