--- a/index.html
+++ b/index.html
@@ -57,64 +57,51 @@
                 <button  id="btn2" type="button" class="btn btn-secondary">English</button>
         </div>
         </nav>
-        <hr>
 
-        <div         class="options">
-        <div         class="shadow p-4 mb-5 bg-whitesmoke rounded">
-        <div         class="card"
-                     style="width: 200px;">
-                <img class="card-img-top"
-                     src="standings.png"
-                     alt="Generic Handsome Guy">
-                <div class="card-body1">
-                 <p  id="card-title1">Standings</p>
-                  <p class="card-text">2018</p>
+<div id="cardHolder">
 
+        <div class="card-deck mt-4">
+        <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="results.jpg" alt="Card image cap">
+                <div class="card-body">
+                        <p class="card-text">Scores</p>
+        </div>
+        </div>
+        </div>
+        <div class="card-deck mt-4">
+        <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="standings.png" alt="Card image cap">
+                <div class="card-body">
+                        <p class="card-text">Standings</p>
                 </div>
         </div>
         </div>
 
-        <div         class="shadow p-4 mb-5 bg-whitesmoke rounded">
-        <div         class="card"
-                     style="width: 200px;">
-                <img class="card-img-top"
-                     src="results.jpg"
-                     alt="Generic Handsome Guy">
-                <div class="card-body2">
-                 <p  id="card-title2">Results </p>
-                  <p class="card-text">2018</p>
-
-         </div>
-         </div>
-         </div>
-        <div         class="shadow p-4 mb-5 bg-whitesmoke rounded">
-         <div        class="card"
-                     style="width: 200px;">
-                <img class="card-img-top"
-                     src="schedule.jpg"
-                     alt="Generic Handsome Guy">
-                <div class="card-body3">
-                 <p  id="card-title3">Schedules </p>
-                  <p class="card-text">2019</p>
-         </div>
-         </div>
-         </div>
-        <div         class="shadow p-4 mb-5 bg-whitesmoke rounded">
-                <div class="card"
-                     style="width: 200px;">
-                <img class="card-img-top"
-                     src="weather.jpg"
-                     alt="Generic Handsome Guy">
-                <div class="card-body4">
-                 <p  id="card-title4">Weather</p>
-                  <p id="card-text4">7 day</p>
+        <div class="card-deck mt-4 mb-4">
+        <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="schedule.jpg" alt="Card image cap">
+                <div class="card-body">
+                        <p class="card-text">2019 Schedule</p>
                 </div>
         </div>
         </div>
+
+        <div class="card-deck mt-4 mb-4">
+        <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="weather.jpg" alt="Card image cap">
+                <div class="card-body">
+                        <p class="card-text">7-day Weather Forecast</p>
+                </div>
+        </div>
+        </div>
+
 
         <div         class="footer">
                 <p>Jamie McKeown 2018 ©</p>
         </div>
+        </div>
+
+
 
 
 
