--- a/index.html
+++ b/index.html
@@ -60,38 +60,55 @@
 
 <div id="cardHolder">
 
+        <div id="card1">
         <div class="card-deck mt-4">
         <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="results.jpg" alt="Card image cap">
                 <div class="card-body">
-                        <p class="card-text">Scores</p>
+                        <span id="card-title1">
+                                <p class="card-text">Scores</p>
+                        </span>
         </div>
         </div>
         </div>
+        </div>
+
+        <div id="card2">
         <div class="card-deck mt-4">
         <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="standings.png" alt="Card image cap">
                 <div class="card-body">
-                        <p class="card-text">Standings</p>
+                        <span id="card-title2">
+                                <p class="card-text">Standings</p>
+                        </span>
                 </div>
         </div>
         </div>
+        </div>
 
-        <div class="card-deck mt-4 mb-4">
+        <div id="card3">
+        <div class="card-deck mt-4 ">
         <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="schedule.jpg" alt="Card image cap">
                 <div class="card-body">
-                        <p class="card-text">2019 Schedule</p>
+                        <span id="card-title3">
+                                <p class="card-text">2019 Schedule</p>
+                        </span>
                 </div>
+        </div>
         </div>
         </div>
 
-        <div class="card-deck mt-4 mb-4">
+        <div id="card4">
+        <div class="card-deck mt-4">
         <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="weather.jpg" alt="Card image cap">
                 <div class="card-body">
-                        <p class="card-text">7-day Weather Forecast</p>
+                        <span id="card-title4">
+                                <p class="card-text">7-day Weather Forecast</p>
+                        </span>
                 </div>
+        </div>
         </div>
         </div>
 
