--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
          </a>
 
         <div         class="container">
-         <h1         class="display-4">Mark's League 2019</h1>
+         <h1         class="display-4">Mark's League</h1>
 
         </div>
         <div class="btn-group" role="group" aria-label="Basic example">
